2001-04-24  Martin Baulig  <baulig@suse.de>

	* bonobo/bonobo-selector.[ch]: Use GtkDialog, not GnomeDialog.

	* bonobo/bonobo-ui-engine-config.c (dialog_new): Use GtkDialog,
	not GnomeDialog.

2001-04-24  Martin Baulig  <baulig@suse.de>

	* bonobo/bonobo-zoomable.h (BonoboZoomableClass):
	Added `POA_Bonobo_Zoomable__epv epv'.
	(bonobo_zoomable_get_epv): Removed.
	(bonobo_zoomable_corba_object_create): Removed.
	(bonobo_zoomable_construct): Removed.

	* bonobo/bonobo-zoomable-frame.h (BonoboZoomableFrameClass):
	Added `POA_Bonobo_ZoomableFrame__epv epv'.
	(bonobo_zoomable_frame_get_epv): Removed.
	(bonobo_zoomable_frame_corba_object_create): Removed.
	(bonobo_zoomable_frame_construct): Removed.

	* bonobo/bonobo-zoomable.c, bonobo/bonobo-zoomable-frame.c:
	Use the new BonoboObject API (the code which was formerly known
	as BonoboXObject).

2001-04-24  Martin Baulig  <baulig@suse.de>

	* bonobo/*.c: Did the basic GTK+ 2.0 porting work, but without
	any real code changes.

2001-04-24  Martin Baulig  <baulig@suse.de>

	* bonobo/Makefile.am (INCLUDES, libbonoboui_la_LIBADD):
	Use the correct CFLAGS and LIBS to make this actually work.
	(libbonoboui_la_SOURCES): Removed bonobo-item-container.c and
	bonobo-property-bag-xml.c.

	* bonobo/bonobo-insert-component.xpm: Moved this here from the
	staging directory.
	
2001-04-19  Michael Meeks  <michael@ximian.com>

	* *.[ch]:
	s/bonobo-xobject/bonobo-object/g;
	s/BonoboXObject/BonoboObject/g;
	s/bonobo_x_object/bonobo_object/g;
	s/BONOBO_X_/BONOBO_/g;
	s/<libgnomebase\/gnome-defs.h>/<gmacros.h>/;
	s/BEGIN_GNOME_DECLS/G_BEGIN_DECLS/g;
	s/END_GNOME_DECLS/G_END_DECLS/g;
	
2001-04-19  Michael Meeks  <michael@ximian.com>

	* bonobo/Makefile.am: add.

	* bonobo/libbonoboui-2.0.pc.in: add.

2001-04-18  Michael Meeks  <michael@ximian.com>

	* tests/Makefile.am: upd.

2001-04-18  Michael Meeks  <michael@ximian.com>

	* bonobo.h: add.

	* libbonoboui.h: add
