@@ -1,5 +1,5 @@
 /* XPM */
-static char * bonobo_insert_component_xpm[] = {
+static const char * bonobo_insert_component_xpm[] = {
 "48 48 376 2",
 "  	c None",
 ". 	c #000000",
